<resources>
    <string name="app_name">Module5Assignment</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="userEmail" />
    <string name="email">Email:</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="stockpal_logo">stockpal logo</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="inventory">Inventory</string>
    <string name="add_item">Add Item</string>
    <string name="delete_item">Delete Item</string>
</resources>